# aml

./: Cargo.toml  README.md
aml/: Cargo.toml
aml-cli/: Cargo.toml
aml-cli/src/: cli.rs  main.rs  reporting.rs
aml-core/: Cargo.toml
aml-core/src/: diagnostics.rs  lib.rs  parser.rs  render.rs  styler.rs  tests.rs
aml-macros/: Cargo.toml
aml-macros/src/: lib.rs
aml/examples/: macro.rs  shorthand.rs  styler.rs  swatch.rs  underlines.rs  xterm.rs
aml/examples/markups/: hello-world.aml  shorthand.aml  underlines.aml  xterm.aml
aml/src/: lib.rs  parser.rs  render.rs  styler.rs
docs/: CLI.md  LIBRARY.md  MARKUP.md  README.md
