[workspace]
resolver = "2"
members  = ["aml-core", "aml-cli", "aml", "aml-macros"]

[workspace.package]
version    = "0.1.0"
authors    = ["Bilakshan Purohit (@bilakshanp)"]
edition    = "2024"
license    = "MIT"
repository = "https://github.com/bilakshanp/aml"


[workspace.dependencies]
aml = { path = "aml", version = "0.1.0" }
aml-core = { path = "aml-core", version = "0.1.0" }
aml-macros = { path = "aml-macros", version = "0.1.0" }

[profile.release]
lto = "fat"
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1
