[package]
name = "aml-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aml"
path = "src/main.rs"

[dependencies]
aml = { workspace = true, features = ["diagnostics"] }
chumsky = "0.12.0"
clap = { version = "4", features = ["derive"] }
