[package]
name = "aml-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ariadne = { version = "0.6.0", optional = true }
chumsky = "0.12.0"
proc-macro2 = { version = "1.0.106", optional = true }
quote = { version = "1.0.45", optional = true }

[features]
diagnostics = ["dep:ariadne"]
quote = ["dep:proc-macro2", "dep:quote"]
styler = []
