[package]
name = "aml-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
aml-core = { workspace = true, features = ["quote", "styler"] }
proc-macro2 = "1.0.106"
quote = "1.0"
syn = { version = "2.0.117" }
