[package]
name = "aml"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aml-core = { workspace = true }

[features]
styler = ["aml-core/styler"]
diagnostics = ["aml-core/diagnostics"]

[dev-dependencies]
aml-core = { workspace = true, features = ["styler"] }
