[package]
name = "aml"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aml-core = { workspace = true }
aml-macros = { workspace = true , optional = true }

[features]
styler = ["aml-core/styler"]
diagnostics = ["aml-core/diagnostics"]
quote = ["aml-core/quote"]
macros = ["dep:aml-macros", "styler"]
