[package]
name = "aml"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aml-core = { workspace = true }
aml-macros = { workspace = true, optional = true }

[features]
diagnostics = ["aml-core/diagnostics"]
macros = ["dep:aml-macros", "styler"]
quote = ["aml-core/quote"]
styler = ["aml-core/styler"]
